pollapp-k8s/django-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pollapp

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: pollapp

  template:
    metadata:
      labels:
        app: pollapp

    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: pollapp
          image: floci-ecr-registry:5000/pollapp:k8s
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
