pollapp-k8s/pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: pollapp
  

spec:
  containers:
    - name: pollapp
      image: pollapp:k8s
      imagePullPolicy: Never # Don't try to download pollapp:k8s; use the image already loaded into the Kind node.

      ports:
        - containerPort: 8000

      readinessProbe:
        httpGet:
          path: /health/
          port: 8000
        initialDelaySeconds: 5
        periodSeconds: 10
      
      livenessProbe:
        httpGet:
          path: /health/
          port: 8000

        initialDelaySeconds: 5
        periodSeconds: 10
      
      # env:
      #   - name: DBNAME
      #     value: "test_db"
        
      #   - name: DBUSER
      #     value: "resil"
        
      #   - name: DBPASSWORD
      #     value: "password"

      #   - name: DBHOST
      #     value: "postgres"

      #   - name: DBPORT
      #     value: "5432"
