pollapp-k8s/postgres.yml
apiVersion: v1
kind: Pod

metadata:
  name: postgres
  labels:
    app: postgres

spec:
  containers:
    - name: postgres
      image: postgres:16

      ports:
        - containerPort: 5432
    
      volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

  volumes:
    - name: postgres-storage
      persistentVolumeClaim:
        claimName: postgres-pvc
