pollapp-k8s/django-service.yml
apiVersion: v1
kind: Service

metadata:
  name: pollapp

spec:
  selector:
    app: pollapp

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
