pollapp-k8s/postgres-headless.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  clusterIP: None

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
