pollapp-k8s/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
