pollapp-k8s/postgres-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-policy

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pollapp

      ports:
        - protocol: TCP
          port: 5432
